@@ -1,8 +1,9 @@
-DIST renderdoc-1.2.tar.gz 41147527 SHA256 5050be7eea5f5721f530ad3d58ac80b3d47e1b81347e6551e4281bd06cf97a3a SHA512 98df7bd6b7fe9d488620027eab50b5e1be53644644969049ed5349d5337a946d2315363b148bc9fad6133c2690f7961070f732d9fedef33b9df5fd7f18ce439c WHIRLPOOL 05409e32afb82bfa90494e2d7c755975040733202de5d76e8a8b4bf603530f6b0cef220c57daf423a2daf72c2270db92c6148246f3b7b67f32f3cec88ce61b46
 DIST renderdoc-1.5.tar.gz 42153749 SHA256 add9d6af2f2fe3884cc813f5ee613acec4f2ffc10ccee67cd8d1e3de83537e29 SHA512 771d406a7a946a8ff34f1466feaf33ec0271f48d4ba06b37c59e011ffaaede3b8f608c8de4145b3a40259d643f33041f721f5aadaffefbe5ae5116399485049d WHIRLPOOL 31f94efa9853ab58e7c0f420214ff1a4d8e4928dcb21d28a6d3269d7a192e024b95877991aad01e7b800294df9a7992658993d88f5cb12100ad57e9e98b87937
+DIST renderdoc-1.8.tar.gz 42732744 SHA256 a5e046720b48c12f3b448936ecf3a4e29a28231348bf024db29e29499d306ef5 SHA512 5206642ae229664591a253180b7e0f1539a18c89ddef7778dbf93a9a6a86b88c8108da50311eda1b0d77f773a6546f87ab607406911dbea93d94763c3cd351f9 WHIRLPOOL bfd6b9fc9e57fced61ba565c9ad4183b18f466e97965672861297a747940b7c5efeaedfa70dbccb8d42b190a89d28c7cc29ce6c49757780dc506a99f8504b68f
 DIST renderdoc_swig_modified-6.zip 6015826 SHA256 c486b9f4fa537b00085890f592ffa5aa4be75153a701f8602105b0f2af1d46d9 SHA512 380760fcd4ec6fe3f2571ac0ce84c8cbd60a413ee5b7679beed4a87dc78ca6a3eef5932d8198476e81bbb04d2b10bfacfb7b94c0508cfaeb358f4033c7b58376 WHIRLPOOL c55a5d367ed2a66a55d472392c52ca3f44dae8c6e604e281272a68871c22fda9f4c4880989eac067e0bfcda7d27917e0f292223fdf7bf2477f30c71f332a724a
-EBUILD renderdoc-1.2.ebuild 1223 SHA256 c386a618e3f0c0e0d18ebe98e3a6b5ccd35e887a14cdc094e0f39b99da279ba0 SHA512 183ab9a3570f37fe1f1b67462879a86956596cfdc9bd6d7be5bbe67b5f3bdf70b1e398e0cb87fa896c954115f6ea4ea21a349ed47a7f80f30bb90aa75eee8fab WHIRLPOOL dce6dcdea06d4b1ea84ed29cd5a04441fc5f2c5e2c0dbd32c1524ec44ab0061a8c21fe60645d4352a529b2239de2e96357a815ff394b68e9ffa8e8d7856bd410
-EBUILD renderdoc-1.5.ebuild 1299 SHA256 7b6517e9413e1e14e5f7a94f87b399843c2ee2dae947e1cfad948b167f193e83 SHA512 83a6d1ebd754595e1fa4d3d29521bda470766c41acbe10461954f2c64194deae1ad78e2bde59a56cd8e125f585939d93202334dd1b383bf22d4c079316230101 WHIRLPOOL 800783dfcba407d0eca8918d80d60fba9af0b5994a88b1e1b50a84bd4a62d540060225fff02455745250d5058a4721721bf3ec56030c681a388c7712edf5a3ee
-EBUILD renderdoc-9999.ebuild 888 SHA256 5a5c10e0ff74065dd2dd2016c888d15a890d2c12482bb5b7c68c971ce78946d9 SHA512 54959e6b37aa5c8091c1693dadbd3b03fb37b9222a8dfd1751b8dd8f3e93a71cf1d7036320cc08fda4c1e9efaee60d095a5289ddbc8242fca2b4fafc8077341a WHIRLPOOL e209314a3fbff6fe2809cb4ba734821e6d49a69dbe9ffee2a5c60d4feeb946e9f3f4b27aa15ccc3e347631771acea18cc51f4186cda9cec554dbd22917ddc944
-MISC ChangeLog 1145 SHA256 acd1af82fdabe75f9f532e8dc94d6962c97f5c37666461f27eea7f75281a660c SHA512 c26d2021fa5fd35ba82cc57fb7e38c22c03a347558752d51a2db1689fe15d9bad99a19448f8b1a2643400409bb9049ed37e7a06299586207217d3af7bfbd2376 WHIRLPOOL f95151ca4994bccaac7ff523e4f332774bd1aaf84ed893bc87e747d4b32f13bb918a24bcba363a1d850fcb94ed509c87c2f24925737a85367e53eae4b25796c0
+DIST renderdoc_swig_modified-7.zip 6015823 SHA256 9d7e5013ada6c42ec95ab167a34db52c1cc8c09b89c8e9373631b1f10596c648 SHA512 78e66e7da0a6632a0f1e6ca0b38b7331fac8921b0d82d42ec21b281f19ff1c9b1ea182c80c52585dceef2e7444777340eedcbda80ac05563da8b892b446f9596 WHIRLPOOL f76ed018f761ff13053c6e6045f9dde374761cd278b502a0b403b7024b17e39c32cb481fe366f90c0a7fc9114b7dc721278bdb5488f0fa4b2dede443dc5771b9
+EBUILD renderdoc-1.5-r1.ebuild 1299 SHA256 e12d82b362aff25dd9c77c1cb7bc66f3852b49d8c0792000188eb33462641dcc SHA512 8afd56b9be2662a8c74aaa7ac11cf3ebd3ee7616da7835ec337dae2f3ede7056e53ce584a52791bac5321208cbbc8bd4c4103546e5fec599e959f94afa302faf WHIRLPOOL 95ad04a30b9346b31940b0ea9a68946c215bb20c8a46639f4c7a9f7654fe0528bf9fa701ffc484f87a778f67943d5d2953726cd2e81b31a457650f5da6affc1c
+EBUILD renderdoc-1.8.ebuild 1300 SHA256 a9a581526df157a14e5ffcfdc3df6aa40fc26d94ac70b4c4e4eb82f60090e100 SHA512 87460d4c992b187390e79bc23e57713670d0ede90e9512ec63bb5edc35dd413cf30120049b7f478a0828e01c642df5ea1dd58ad7c3d1b1fa4c440b2b9d8f6ca0 WHIRLPOOL 6f51488b0d979242dcbd529aac4a1b625fffaefbff99089a4ccf2c04fd9015c1959896ff315e0562cc2334f4507d96bc7afb5f7528a7b554de71fd048349d0d1
+EBUILD renderdoc-9999.ebuild 1235 SHA256 8d7bf44628447746f53a9a5ba5db8014ad71ef21e147cd0132a113473ab9afd8 SHA512 376ad3782a7a8cced8502ca4956908311bdbd053663324aea4fe3de9ae49193c5772174984fbd80024395170ecc36244dad815ea44ec1dbccc052aa0b6088cdc WHIRLPOOL 67a19f2a1d9421547db7e02d0a326584925cc7ac7753350b418bc273890f756c90c49b7008ada6505bd4c3756d1f249823174693ce0a93e9198a364a333f551b
+MISC ChangeLog 1437 SHA256 a50d3c0005a799100f20a363188025d926c89246ab584d6ec2362e5e93b91fd0 SHA512 0f3bce5985abf21722b1a83809cbcd92b5ad0b5c72e4cb7a0a52d32f02f116867fb8b256761bc2d7df8e59a4ea9021f46c7c22ecd90ce0190b6e9e681e8165a7 WHIRLPOOL d3b4d7ba5f2acf809e63878920816e5c0981f0d8d6d34d1c80511f31249cbda1109523bece7548abfe9c4b7c336854f76d77eb58a52d85f1417617418380610a
 MISC metadata.xml 617 SHA256 e9fbacbe415bc07df43e7f8e712ab879f7cdd471e7fb8eca804494103418b8fc SHA512 4cad8316dce107b2cd7e7eb426a106388563955c5ba333b1fcb024c4265c0d7b2fca78dcb2abdfd737fb8fe06066af22a3fec7d0db66870ba2f6739e7b9bea77 WHIRLPOOL 094c37a0562e2f09d9998d06d4917b474f599a57804a09300dba83e3fe8d489e4781d2d5924208fccb1bdea866fd42cac7abae9f72083284f24b8bb75e1d5a83
