@@ -1,10 +1,12 @@
-# Copyright 1999-2018 Gentoo Authors
+# Copyright 1999-2020 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
-EAPI="6"
+EAPI="7"
+PYTHON_COMPAT=( python3_6 python3_7 )
+inherit qmake-utils cmake-utils eutils python-single-r1
 
-PYTHON_COMPAT=( python3_6 )
-
+SWIG_VERSION="6"
+SWIG_ZIP_FILENAME="${PN}_swig_modified-${SWIG_VERSION}.zip"
 inherit qmake-utils cmake-multilib eutils python-single-r1 git-r3
 
 DESCRIPTION="A tool for tracing, analyzing, and debugging graphics APIs"
@@ -13,7 +15,6 @@ EGIT_REPO_URI="https://github.com/baldurk/renderdoc.git"
 EGIT_BRANCH="v1.x"
 CMAKE_BUILD_TYPE="Release"
 CMAKE_BUILD_GENERATOR="Ninja"
-export QT_SELECT="qt5"
 
 LICENSE="MIT"
 SLOT="0"
@@ -25,17 +26,27 @@ RDEPEND="${PYTHON_DEPS}
 	x11-libs/libX11
 	x11-libs/libxcb
 	x11-libs/xcb-util-keysyms
-	>=sys-devel/gcc-5.0:*
 	python? (
-		>=dev-lang/python-3.6:*
+		${PYTHON_DEPS}
 	)
 	qt5? (
-		dev-qt/qtcore:5
-		dev-qt/qtgui:5
-		dev-qt/qtwidgets:5
-		dev-qt/qtsvg:5
-		dev-qt/qtx11extras:5
+		>=dev-qt/qtcore-5.6:5
+		>=dev-qt/qtgui-5.6:5
+		>=dev-qt/qtwidgets-5.6:5
+		>=dev-qt/qtsvg-5.6:5
+		>=dev-qt/qtx11extras-5.6:5
 	)"
 DEPEND="${RDEPEND}
+	>=sys-devel/gcc-6.0:*
 	dev-util/cmake
-	sys-devel/bison"
+	sys-devel/bison
+	app-arch/unzip"
+
+src_configure() {
+	export QT_SELECT=qt5
+	export QMAKE_QT5_COMMAND=qmake-qt5
+	local mycmakeargs=(
+		-DRENDERDOC_SWIG_PACKAGE="${DISTDIR}/${SWIG_ZIP_FILENAME}"
+	)
+	cmake-utils_src_configure
+}
