@@ -6,8 +6,10 @@ AUX devil-1.7.8-nvtt-glut.patch 2477 SHA256 7660558de9615d617027f501f93e74726476
 AUX devil-1.7.8-restrict.patch 587 SHA256 f30f4f95a208963af7fcf5de68c2a94db55911b34b9feef2c4324673388784c3 SHA512 9370a94406e98979266d027857d7dd04069eefb6e2ccfb52d254b9eb658d932e5e7e9bd3a38aad57099b870c54aaa0a2d8b337f9bad42d06f6521c10d0a6f8db WHIRLPOOL d7633320ba62b81f80aa91a42228c70afe647f466f63ecc68e55afcfd3875ff05f00669a08db7bbcfa2e3c26e29d12fc02c0947dc46116ee3ca4460c8f4e3b9f
 AUX devil-1.7.8-uchar.patch 739 SHA256 8c24e84fb82a1c939d7cf05c55c9ebf903eef59dc5730fc78568e9a117d216b4 SHA512 cf611410bb61877a416ecb573c42c78f94eae78f9a2c6105cf82d095ca68fb25d995cbfefb0f5bac942eb03f13278305a2e43106f976aff4608cad0307a1e657 WHIRLPOOL d32a269583d5d2e6804a2e10d60c2f0e9b934472dcf667da27dfd46a147b8ac5bcfb2a4818e6c096a859af343423772c1b6ef1a4b355d8e7851c7134a526c404
 DIST DevIL-1.7.8.tar.gz 2051993 SHA256 682ffa3fc894686156337b8ce473c954bf3f4fb0f3ecac159c73db632d28a8fd SHA512 a67e1488d6cb366431d9fcb460b8fe5b8a1dd79426ac77f8abd0db4a5aad7512697f72ef0c49ddb0e806469cc37ba1319e10ccd2ebd73942332df2c3c507458e WHIRLPOOL 749bf0ce73786709414d6f2c3bf29b20c56397cb6f9f92b4158902a98a4f4d0ef66d78096ce8daea3d65b1718c5255421055cd223e9269f6c773ca310c2df146
+DIST DevIL-1.8.0.tar.gz 3084833 SHA256 0075973ee7dd89f0507873e2580ac78336452d29d34a07134b208f44e2feb709 SHA512 103fa51f4094af0fe988bf9520e1b9178900f980b72226e64ede60b6b0938a646c670a37372214edb557e492947cd5af5012a3ac906734a5ea83e072f81db583 WHIRLPOOL 24b56ac990ddcc258b12949e4398163ea582af2cb701fb77788750eacecad8a6f72c89d6250a43303bfafdfb16521083293c9d1c1a30c30732af79abae23bebc
 DIST v1.8.0.tar.gz 2949100 SHA256 52129f247b26fcb5554643c9e6bbee75c4b9717735fdbf3c6ebff08cee38ad37 SHA512 4aed5e50a730ece8b1eb6b2f6204374c6fb6f5334cf7c880d84c0f79645ea7c6b5118f57a7868a487510fc59c452f51472b272215d4c852f265f58b5857e17c7 WHIRLPOOL ba326cba2841cb4b11679fcb745701861130eb41628fee64323142f5f199dd3cc5f3de9dabc3dc01834f6419256102cde8d80fab78df2c7c544c895f336dd511
 EBUILD devil-1.7.8-r3.ebuild 1929 SHA256 850618b8c417c83c77a0a3306193e5d400a4fd1c13cf3a71755146023bdb2afd SHA512 3c3eaf75af9fbf07b59692a59f6e76b5b29e52aa7acb903c3493735ffe5252d388d11d9755a4f6bc83f45201f019a252d810cc9f6eb5eed57671ea5d274730f0 WHIRLPOOL f11ae73dab8afbeadebdef9a16ec35826d9ef5939725942eb3225eedc61526fff74874a2fc3bc3c7f2dd34a8ce2529829b0c36802225bb103c28a63b4e9f7a5f
+EBUILD devil-1.8.0-r1.ebuild 2127 SHA256 1fa39b6746fd152e5e9c112787dea6917d2f1fc06ee3fa17b7d50c9b4646eab3 SHA512 e98887fbb86ee933bba86c1b3538e34a3ebb0b6361b4e49b554a85a69feeb1dd652233565c13043c5763781a6a63330c12f0d3b15ff91951b23b7a46fab9778f WHIRLPOOL c8329f08fe01fa499a4a3d3e1e85628c7e1c64d63b00de9611436ae79b1591d1756bd343252264cd84efae50405b6ac418036ddc17f055d34ebbed76dcffc28f
 EBUILD devil-1.8.0.ebuild 2097 SHA256 c37021f8ba3926a1cd5ef64adc68b8c7182e0c1bb5a7805694589ca2221107eb SHA512 3501a0704f8e12f46d4542e175c653c86e5c7f23ee1949e53509996dfde92a3bede399eb3c329348c9f7b42f7f93dab284413d68c6ff2404525987a8ec63638d WHIRLPOOL 6e0382de1e1ed64208750baf9bac61025dd8d2cbc62dd231d3688d417e0f12a7b674f1a13a167d1b6873a5339b52804dce06ef254efd82b78bc7388b35e7a8a1
 MISC ChangeLog 505 SHA256 c23e6c06f1e9e40af3a8eb6a42ce7c47439a6ab3cafa05b08ceb79e6f5da0435 SHA512 7d841b71be87387762a98f1fbd938c13b2207db59b25e0e72699f073ab12e92f5cd09960dba31d30d07fbc72ea8ea5ed2990d1d2cc52f2c3beba0408655cbd1d WHIRLPOOL 4173675a4b280d445c738f3481cb9db3478bceecc24cdf73277924f92ff0107cb1445af85af843b9ef8d9e27ba884e235ef29d9280aa9dc9a010eb9d7a63b56b
 MISC metadata.xml 499 SHA256 d4cf93176bedb75d01c37dcd8d29a49fbfebfa7fd49f2dfcdf6cadb7365a7c39 SHA512 68440791a1c641a6983d297e924bee78038905b1ee383592b220f0ef51980d8f9eb237a6d70b0d848781d08e72fe02f4b4f36691d37a72b4003ea59fe3764cfc WHIRLPOOL f83bbbadaf75bb031417c47910870f8529d60ef1bb06f2b7aa431d7878ca54486befcbc9020cc5ab2cba6d2512b883d3798e1425df445cdb794335e4d2a5096e
