@@ -1,8 +1,9 @@
-# Copyright 1999-2018 Gentoo Foundation
+# Copyright 1999-2019 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
 EAPI=6
-inherit autotools eutils
+
+inherit autotools
 
 MY_P=DevIL-${PV}
 
@@ -12,30 +13,42 @@ SRC_URI="mirror://sourceforge/openil/${MY_P}.tar.gz"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~amd64 ~arm ~mips ~ppc ~ppc64 ~x86"
-IUSE="allegro gif glut jpeg jpeg2k mng nvtt openexr opengl png sdl cpu_flags_x86_sse cpu_flags_x86_sse2 cpu_flags_x86_sse3 static-libs tiff xpm X"
+KEYWORDS="amd64 ~arm arm64 ~hppa ~mips ppc ppc64 x86"
+IUSE="allegro cpu_flags_x86_sse cpu_flags_x86_sse2 cpu_flags_x86_sse3 gif glut jpeg mng nvtt openexr opengl png sdl static-libs tiff X xpm"
 
-RDEPEND="allegro? ( media-libs/allegro:0 )
+RDEPEND="
+	allegro? ( media-libs/allegro:0 )
 	gif? ( media-libs/giflib:= )
 	glut? ( media-libs/freeglut )
 	jpeg? ( virtual/jpeg:0 )
-	jpeg2k? ( media-libs/jasper:= )
 	mng? ( media-libs/libmng:= )
 	nvtt? ( media-gfx/nvidia-texture-tools )
 	openexr? ( media-libs/openexr:= )
-	opengl? ( virtual/opengl virtual/glu )
+	opengl? ( virtual/opengl
+		virtual/glu )
 	png? ( media-libs/libpng:0= )
 	sdl? ( media-libs/libsdl )
 	tiff? ( media-libs/tiff:0 )
-	xpm? ( x11-libs/libXpm )
 	X? ( x11-libs/libXext
-	x11-libs/libX11
-	x11-libs/libXrender )"
+		 x11-libs/libX11
+		 x11-libs/libXrender )
+	xpm? ( x11-libs/libXpm )"
 DEPEND="${RDEPEND}
-	virtual/pkgconfig"
+	virtual/pkgconfig
+	X? ( x11-base/xorg-proto )"
+
+PATCHES=(
+	"${FILESDIR}/${P}"-CVE-2009-3994.patch
+	"${FILESDIR}/${P}"-libpng14.patch
+	"${FILESDIR}/${P}"-nvtt-glut.patch
+	"${FILESDIR}/${P}"-ILUT.patch
+	"${FILESDIR}/${P}"-restrict.patch
+	"${FILESDIR}/${P}"-fix-test.patch
+	"${FILESDIR}/${P}"-jasper-remove-uchar.patch
+)
 
 src_prepare() {
-	epatch "${FILESDIR}"/${P}-{CVE-2009-3994,libpng14,nvtt-glut,ILUT,restrict,fix-test,uchar}.patch
+	default
 	eautoreconf
 }
 
@@ -51,7 +64,7 @@ src_configure() {
 		$(use_enable openexr exr) \
 		$(use_enable gif) \
 		$(use_enable jpeg) \
-		$(use_enable jpeg2k jp2) \
+		--enable-jp2 \
 		$(use_enable mng) \
 		$(use_enable png) \
 		$(use_enable tiff) \
@@ -71,5 +84,7 @@ src_configure() {
 
 src_install() {
 	default
-	use static-libs || prune_libtool_files
+
+	# package provides .pc files
+	find "${D}" -name '*.la' -delete || die
 }
